Fix compile errors.

--- a/stm32f779i-eval/stm32f779i-eval.ioc
+++ b/stm32f779i-eval/stm32f779i-eval.ioc
@@ -38,25 +38,26 @@ DSIHOST_D1P.Locked=true
 DSIHOST_D1P.Mode=DSIHost_Standalone
 DSIHOST_D1P.Signal=DSIHOST_D1P
 File.Version=6
-KeepUserPlacement=false
+KeepUserPlacement=true
 Mcu.CPN=STM32F779NIH6
 Mcu.Family=STM32F7
 Mcu.IP0=ADC3
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=SPDIFRX
-Mcu.IP11=SYS
-Mcu.IP12=USART1
-Mcu.IP13=USB_OTG_FS
-Mcu.IP14=USB_OTG_HS
-Mcu.IP2=DSIHOST
-Mcu.IP3=FMC
-Mcu.IP4=NVIC
-Mcu.IP5=QUADSPI
-Mcu.IP6=RCC
-Mcu.IP7=SAI1
-Mcu.IP8=SAI2
-Mcu.IP9=SDMMC1
-Mcu.IPNb=15
+Mcu.IP10=SDMMC1
+Mcu.IP11=SPDIFRX
+Mcu.IP12=SYS
+Mcu.IP13=USART1
+Mcu.IP14=USB_OTG_FS
+Mcu.IP15=USB_OTG_HS
+Mcu.IP2=DFSDM1
+Mcu.IP3=DSIHOST
+Mcu.IP4=FMC
+Mcu.IP5=NVIC
+Mcu.IP6=QUADSPI
+Mcu.IP7=RCC
+Mcu.IP8=SAI1
+Mcu.IP9=SAI2
+Mcu.IPNb=16
 Mcu.Name=STM32F779NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -133,7 +134,8 @@ Mcu.Pin161=PE13
 Mcu.Pin162=PB11
 Mcu.Pin163=PB14
 Mcu.Pin164=PB15
-Mcu.Pin165=VP_SYS_VS_Systick
+Mcu.Pin165=VP_DFSDM1_VS_IN0
+Mcu.Pin166=VP_SYS_VS_Systick
 Mcu.Pin17=PG13
 Mcu.Pin18=PB9
 Mcu.Pin19=PB7
@@ -225,7 +227,7 @@ Mcu.Pin96=PF5
 Mcu.Pin97=PH2
 Mcu.Pin98=PD15
 Mcu.Pin99=PB13
-Mcu.PinsNb=166
+Mcu.PinsNb=167
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F779NIHx
@@ -1027,12 +1029,15 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIOutputFreq_Value=192000000
-SAI1.IPParameters=Instance-SAI_A_SPDIF,VirtualMode-SAI_A_SPDIF
+SAI1.IPParameters=Instance-SAI_A_SPDIF,VirtualMode-SAI_A_SPDIF,RealAudioFreq-SAI_A_SPDIF
 SAI1.Instance-SAI_A_SPDIF=SAI$Index_Block_A
+SAI1.RealAudioFreq-SAI_A_SPDIF=1000.0 KHz
 SAI1.VirtualMode-SAI_A_SPDIF=VM_SPDIF
-SAI2.IPParameters=Instance-SAI_B_MasterWithClock,MClockEnable-SAI_B_MasterWithClock,VirtualMode-SAI_B_MasterWithClock
+SAI2.ErrorAudioFreq-SAI_B_MasterWithClock=30.2 %
+SAI2.IPParameters=Instance-SAI_B_MasterWithClock,MClockEnable-SAI_B_MasterWithClock,VirtualMode-SAI_B_MasterWithClock,RealAudioFreq-SAI_B_MasterWithClock,ErrorAudioFreq-SAI_B_MasterWithClock
 SAI2.Instance-SAI_B_MasterWithClock=SAI$Index_Block_B
 SAI2.MClockEnable-SAI_B_MasterWithClock=SAI_MASTERCLOCK_ENABLE
+SAI2.RealAudioFreq-SAI_B_MasterWithClock=250.0 KHz
 SAI2.VirtualMode-SAI_B_MasterWithClock=VM_MASTER
 SH.FMC_A0.0=FMC_A0,13b-sda1
 SH.FMC_A0.1=FMC_A0,22b-a1
@@ -1250,6 +1255,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 USB_OTG_HS.IPParameters=VirtualMode-Device_HS
 USB_OTG_HS.VirtualMode-Device_HS=Device_HS
+VP_DFSDM1_VS_IN0.Mode=Parallel_Input_ch0
+VP_DFSDM1_VS_IN0.Signal=DFSDM1_VS_IN0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=STM32F779I-EVAL
