--- a/stm32f779i-eval/stm32f779i-eval.ioc
+++ b/stm32f779i-eval/stm32f779i-eval.ioc
@@ -43,12 +43,9 @@ Mcu.CPN=STM32F779NIH6
 Mcu.Family=STM32F7
 Mcu.IP0=ADC3
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=SDMMC1
-Mcu.IP11=SPDIFRX
-Mcu.IP12=SYS
-Mcu.IP13=USART1
-Mcu.IP14=USB_OTG_FS
-Mcu.IP15=USB_OTG_HS
+Mcu.IP10=SPDIFRX
+Mcu.IP11=SYS
+Mcu.IP12=USART1
 Mcu.IP2=DFSDM1
 Mcu.IP3=DSIHOST
 Mcu.IP4=FMC
@@ -57,7 +54,7 @@ Mcu.IP6=QUADSPI
 Mcu.IP7=RCC
 Mcu.IP8=SAI1
 Mcu.IP9=SAI2
-Mcu.IPNb=16
+Mcu.IPNb=13
 Mcu.Name=STM32F779NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -261,12 +258,10 @@ PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_FS1_DM
 PA11.Locked=true
-PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=USB_FS1_DP
 PA12.Locked=true
-PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS/SWDIO
@@ -290,7 +285,6 @@ PA2.Signal=SAI2_SCK_B
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=ULPI_D0 [USB3300-EZK_D0]
 PA3.Locked=true
-PA3.Mode=Device_HS
 PA3.Signal=USB_OTG_HS_ULPI_D0
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=PAR_HSYNC
@@ -299,7 +293,6 @@ PA4.Signal=DCMI_HSYNC
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=ULPI_CK [USB3300-EZK_CLKOUT]
 PA5.Locked=true
-PA5.Mode=Device_HS
 PA5.Signal=USB_OTG_HS_ULPI_CK
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=PAR_PCLK
@@ -321,32 +314,26 @@ PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=ULPI_D1 [USB3300-EZK_D1]
 PB0.Locked=true
-PB0.Mode=Device_HS
 PB0.Signal=USB_OTG_HS_ULPI_D1
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=ULPI_D2 [USB3300-EZK_D2]
 PB1.Locked=true
-PB1.Mode=Device_HS
 PB1.Signal=USB_OTG_HS_ULPI_D2
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=ULPI_D3 [USB3300-EZK_D3]
 PB10.Locked=true
-PB10.Mode=Device_HS
 PB10.Signal=USB_OTG_HS_ULPI_D3
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=ULPI_D4 [USB3300-EZK_D4]
 PB11.Locked=true
-PB11.Mode=Device_HS
 PB11.Signal=USB_OTG_HS_ULPI_D4
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=ULPI_D5 [USB3300-EZK_D5]
 PB12.Locked=true
-PB12.Mode=Device_HS
 PB12.Signal=USB_OTG_HS_ULPI_D5
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=ULPI_D6 [USB3300-EZK_D6]
 PB13.Locked=true
-PB13.Mode=Device_HS
 PB13.Signal=USB_OTG_HS_ULPI_D6
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=USB_FS2_DM
@@ -372,7 +359,6 @@ PB4.Signal=SDMMC2_D3
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=ULPI_D7 [USB3300-EZK_D7]
 PB5.Locked=true
-PB5.Mode=Device_HS
 PB5.Signal=USB_OTG_HS_ULPI_D7
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=QSPI_BK1_NCS [MT25QL512ABA8ESF-0SIT_CS]
@@ -394,7 +380,6 @@ PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ULPI_STP [USB3300-EZK_STP]
 PC0.Locked=true
-PC0.Mode=Device_HS
 PC0.Signal=USB_OTG_HS_ULPI_STP
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=SAI1_SDA [WM8994ECS/R_ADCDAT1]
@@ -404,17 +389,14 @@ PC1.Signal=SAI1_SD_A
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=SD1_D2 [SMS064FF_1]
 PC10.Locked=true
-PC10.Mode=mmc_4_bits_Wide_bus
 PC10.Signal=SDMMC1_D2
 PC11.GPIOParameters=GPIO_Label
 PC11.GPIO_Label=SD1_D3 [SMS064FF_2]
 PC11.Locked=true
-PC11.Mode=mmc_4_bits_Wide_bus
 PC11.Signal=SDMMC1_D3
 PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=SD1_CLK [SMS064FF_5]
 PC12.Locked=true
-PC12.Mode=mmc_4_bits_Wide_bus
 PC12.Signal=SDMMC1_CK
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=TAMPER_WKUP_KEY [B2]
@@ -458,12 +440,10 @@ PC7.Signal=FMC_NE1
 PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=SD1_D0 [SMS064FF_7]
 PC8.Locked=true
-PC8.Mode=mmc_4_bits_Wide_bus
 PC8.Signal=SDMMC1_D0
 PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=SD1_D1 [SMS064FF_8]
 PC9.Locked=true
-PC9.Mode=mmc_4_bits_Wide_bus
 PC9.Signal=SDMMC1_D1
 PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=D2[IS61WV102416BLL_I/OD2]
@@ -500,7 +480,6 @@ PD15.Signal=FMC_D1_DA1
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=SD1_CMD [SMS064FF_3]
 PD2.Locked=true
-PD2.Mode=mmc_4_bits_Wide_bus
 PD2.Signal=SDMMC1_CMD
 PD3.GPIOParameters=GPIO_Label
 PD3.GPIO_Label=PAR_D5
@@ -778,7 +757,6 @@ PH3.Signal=FMC_SDNE0
 PH4.GPIOParameters=GPIO_Label
 PH4.GPIO_Label=ULPI_NXT [USB3300-EZK_NXT]
 PH4.Locked=true
-PH4.Mode=Device_HS
 PH4.Signal=USB_OTG_HS_ULPI_NXT
 PH5.GPIOParameters=GPIO_Label
 PH5.GPIO_Label=SDNWE [IS42S32800G_WE]
@@ -815,7 +793,6 @@ PI10.Signal=FMC_D31
 PI11.GPIOParameters=GPIO_Label
 PI11.GPIO_Label=ULPI_DIR [USB3300_DIR]
 PI11.Locked=true
-PI11.Mode=Device_HS
 PI11.Signal=USB_OTG_HS_ULPI_DIR
 PI12.GPIOParameters=GPIO_Label
 PI12.GPIO_Label=LCD_HSYNC
@@ -958,7 +935,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC3_Init-ADC3-false-HAL-true,4-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_SAI1_Init-SAI1-false-HAL-true,8-MX_SAI2_Init-SAI2-false-HAL-true,9-MX_SDMMC1_MMC_Init-SDMMC1-false-HAL-true,10-MX_SPDIFRX_Init-SPDIFRX-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,13-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC3_Init-ADC3-false-HAL-true,4-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_SAI1_Init-SAI1-false-HAL-true,8-MX_SAI2_Init-SAI2-false-HAL-true,9-MX_SPDIFRX_Init-SPDIFRX-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_DFSDM1_Init-DFSDM1-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=12000000
@@ -983,7 +960,7 @@ RCC.I2C2Freq_Value=12000000
 RCC.I2C3Freq_Value=12000000
 RCC.I2C4Freq_Value=12000000
 RCC.I2SFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQ,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQ,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFTFreq_Value=48000000
 RCC.LCDTFToutputFreq_Value=48000000
 RCC.LPTIM1Freq_Value=12000000
@@ -1007,6 +984,7 @@ RCC.PLLSAIQ=3
 RCC.PLLSAIQCLKFreq_Value=64000000
 RCC.PLLSAIRCLKFreq_Value=96000000
 RCC.PLLSAIoutputFreq_Value=96000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=64000000
 RCC.SAI2Freq_Value=64000000
@@ -1251,10 +1229,6 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USB_OTG_FS.IPParameters=VirtualMode
-USB_OTG_FS.VirtualMode=Device_Only
-USB_OTG_HS.IPParameters=VirtualMode-Device_HS
-USB_OTG_HS.VirtualMode-Device_HS=Device_HS
 VP_DFSDM1_VS_IN0.Mode=Parallel_Input_ch0
 VP_DFSDM1_VS_IN0.Signal=DFSDM1_VS_IN0
 VP_SYS_VS_Systick.Mode=SysTick
