--- a/stm32f779i-eval/stm32f779i-eval.ioc
+++ b/stm32f779i-eval/stm32f779i-eval.ioc
@@ -43,18 +43,16 @@ Mcu.CPN=STM32F779NIH6
 Mcu.Family=STM32F7
 Mcu.IP0=ADC3
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=SPDIFRX
-Mcu.IP11=SYS
-Mcu.IP12=USART1
+Mcu.IP10=USART1
 Mcu.IP2=DFSDM1
 Mcu.IP3=DSIHOST
 Mcu.IP4=FMC
 Mcu.IP5=NVIC
 Mcu.IP6=QUADSPI
 Mcu.IP7=RCC
-Mcu.IP8=SAI1
-Mcu.IP9=SAI2
-Mcu.IPNb=13
+Mcu.IP8=SAI2
+Mcu.IP9=SYS
+Mcu.IPNb=11
 Mcu.Name=STM32F779NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -384,7 +382,6 @@ PC0.Signal=USB_OTG_HS_ULPI_STP
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=SAI1_SDA [WM8994ECS/R_ADCDAT1]
 PC1.Locked=true
-PC1.Mode=SAI_A_SPDIF
 PC1.Signal=SAI1_SD_A
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=SD1_D2 [SMS064FF_1]
@@ -662,7 +659,6 @@ PG11.Signal=ETH_TX_EN
 PG12.GPIOParameters=GPIO_Label
 PG12.GPIO_Label=SPDIF_RX1 [DLR11H0_1]
 PG12.Locked=true
-PG12.Mode=IN1
 PG12.Signal=SPDIFRX_IN1
 PG13.GPIOParameters=GPIO_Label
 PG13.GPIO_Label=MII_TXD0 [DP83848CVV_TXD0]
@@ -935,7 +931,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC3_Init-ADC3-false-HAL-true,4-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_SAI1_Init-SAI1-false-HAL-true,8-MX_SAI2_Init-SAI2-false-HAL-true,9-MX_SPDIFRX_Init-SPDIFRX-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_DFSDM1_Init-DFSDM1-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC3_Init-ADC3-false-HAL-true,4-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_SAI2_Init-SAI2-true-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_DFSDM1_Init-DFSDM1-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=12000000
@@ -1007,10 +1003,6 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIOutputFreq_Value=192000000
-SAI1.IPParameters=Instance-SAI_A_SPDIF,VirtualMode-SAI_A_SPDIF,RealAudioFreq-SAI_A_SPDIF
-SAI1.Instance-SAI_A_SPDIF=SAI$Index_Block_A
-SAI1.RealAudioFreq-SAI_A_SPDIF=1000.0 KHz
-SAI1.VirtualMode-SAI_A_SPDIF=VM_SPDIF
 SAI2.ErrorAudioFreq-SAI_B_MasterWithClock=30.2 %
 SAI2.IPParameters=Instance-SAI_B_MasterWithClock,MClockEnable-SAI_B_MasterWithClock,VirtualMode-SAI_B_MasterWithClock,RealAudioFreq-SAI_B_MasterWithClock,ErrorAudioFreq-SAI_B_MasterWithClock
 SAI2.Instance-SAI_B_MasterWithClock=SAI$Index_Block_B
