--- a/stm32f779i-eval/stm32f779i-eval.ioc
+++ b/stm32f779i-eval/stm32f779i-eval.ioc
@@ -130,7 +130,7 @@ Mcu.Pin162=PB11
 Mcu.Pin163=PB14
 Mcu.Pin164=PB15
 Mcu.Pin165=VP_DFSDM1_VS_IN0
-Mcu.Pin166=VP_SYS_VS_Systick
+Mcu.Pin166=VP_SYS_VS_tim6
 Mcu.Pin167=VP_STMicroelectronics.X-CUBE-AZRTOS-F7_VS_RTOSJjThreadX_6.1.10_1.1.0
 Mcu.Pin17=PG13
 Mcu.Pin18=PB9
@@ -243,6 +243,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:true\:false
+NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 PA0/WKUP.GPIOParameters=GPIO_Label
 PA0/WKUP.GPIO_Label=SAI2_SDB [WM8994ECS/R_DACDATA1]
@@ -1235,7 +1238,7 @@ VP_DFSDM1_VS_IN0.Mode=Parallel_Input_ch0
 VP_DFSDM1_VS_IN0.Signal=DFSDM1_VS_IN0
 VP_STMicroelectronics.X-CUBE-AZRTOS-F7_VS_RTOSJjThreadX_6.1.10_1.1.0.Mode=RTOSJjThreadX
 VP_STMicroelectronics.X-CUBE-AZRTOS-F7_VS_RTOSJjThreadX_6.1.10_1.1.0.Signal=STMicroelectronics.X-CUBE-AZRTOS-F7_VS_RTOSJjThreadX_6.1.10_1.1.0
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=STM32F779I-EVAL
 boardIOC=true
