--- a/stm32f779i-eval/stm32f779i-eval.ioc
+++ b/stm32f779i-eval/stm32f779i-eval.ioc
@@ -944,76 +944,76 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_ADC3_Init-ADC3-true-HAL-true,false-4-MX_DSIHOST_DSI_Init-DSIHOST-true-HAL-true,false-5-MX_FMC_Init-FMC-true-HAL-true,false-6-MX_QUADSPI_Init-QUADSPI-true-HAL-true,false-7-MX_SAI2_Init-SAI2-true-HAL-true,false-8-MX_USART1_UART_Init-USART1-true-HAL-true,false-9-MX_DFSDM1_Init-DFSDM1-true-HAL-true,false-10-MX_DMA2D_Init-DMA2D-false-HAL-true,false-11-MX_LTDC_Init-LTDC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.AHBFreq_Value=48000000
+RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=12000000
-RCC.APB1TimFreq_Value=24000000
+RCC.APB1Freq_Value=54000000
+RCC.APB1TimFreq_Value=108000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=24000000
-RCC.APB2TimFreq_Value=48000000
+RCC.APB2Freq_Value=108000000
+RCC.APB2TimFreq_Value=216000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=48000000
+RCC.CortexFreq_Value=216000000
 RCC.DFSDMAudioFreq_Value=64000000
-RCC.DFSDMFreq_Value=24000000
+RCC.DFSDMFreq_Value=108000000
 RCC.DSIFreq_Value=62500000
 RCC.DSITXEscFreq_Value=15625000
-RCC.EthernetFreq_Value=48000000
-RCC.FCLKCortexFreq_Value=48000000
+RCC.EthernetFreq_Value=216000000
+RCC.FCLKCortexFreq_Value=216000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=48000000
+RCC.HCLKFreq_Value=216000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=12000000
-RCC.I2C2Freq_Value=12000000
-RCC.I2C3Freq_Value=12000000
-RCC.I2C4Freq_Value=12000000
+RCC.I2C1Freq_Value=54000000
+RCC.I2C2Freq_Value=54000000
+RCC.I2C3Freq_Value=54000000
+RCC.I2C4Freq_Value=54000000
 RCC.I2SFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQ,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQ,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFTFreq_Value=48000000
 RCC.LCDTFToutputFreq_Value=48000000
-RCC.LPTIM1Freq_Value=12000000
+RCC.LPTIM1Freq_Value=54000000
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=48000000
-RCC.PLLCLKFreq_Value=48000000
+RCC.MCO2PinFreq_Value=216000000
+RCC.PLLCLKFreq_Value=216000000
 RCC.PLLDSIVCOFreq_Value=1000000000
 RCC.PLLI2SPCLKFreq_Value=96000000
 RCC.PLLI2SQCLKFreq_Value=96000000
 RCC.PLLI2SRCLKFreq_Value=96000000
 RCC.PLLI2SRoutputFreq_Value=96000000
 RCC.PLLM=25
-RCC.PLLP=RCC_PLLP_DIV4
+RCC.PLLN=432
 RCC.PLLQ=4
-RCC.PLLQCLKFreq_Value=48000000
-RCC.PLLQoutputFreq_Value=48000000
+RCC.PLLQCLKFreq_Value=108000000
+RCC.PLLQoutputFreq_Value=108000000
 RCC.PLLRCLKFreq_Value=216000000
-RCC.PLLRFreq_Value=96000000
+RCC.PLLRFreq_Value=216000000
 RCC.PLLSAIPCLKFreq_Value=96000000
 RCC.PLLSAIQ=3
 RCC.PLLSAIQCLKFreq_Value=64000000
 RCC.PLLSAIRCLKFreq_Value=96000000
 RCC.PLLSAIoutputFreq_Value=96000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RNGFreq_Value=48000000
+RCC.RNGFreq_Value=108000000
 RCC.SAI1Freq_Value=64000000
 RCC.SAI2Freq_Value=64000000
-RCC.SDMMC2Freq_Value=48000000
+RCC.SDMMC2Freq_Value=216000000
 RCC.SDMMCClockSelection=RCC_SDMMC1CLKSOURCE_CLK48
-RCC.SDMMCFreq_Value=48000000
+RCC.SDMMCFreq_Value=108000000
 RCC.SPDIFRXFreq_Value=96000000
-RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKFreq_VALUE=216000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=12000000
-RCC.UART5Freq_Value=12000000
-RCC.UART7Freq_Value=12000000
-RCC.UART8Freq_Value=12000000
-RCC.USART1Freq_Value=24000000
-RCC.USART2Freq_Value=12000000
-RCC.USART3Freq_Value=12000000
-RCC.USART6Freq_Value=24000000
-RCC.USBFreq_Value=48000000
+RCC.UART4Freq_Value=54000000
+RCC.UART5Freq_Value=54000000
+RCC.UART7Freq_Value=54000000
+RCC.UART8Freq_Value=54000000
+RCC.USART1Freq_Value=108000000
+RCC.USART2Freq_Value=54000000
+RCC.USART3Freq_Value=54000000
+RCC.USART6Freq_Value=108000000
+RCC.USBFreq_Value=108000000
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=192000000
 SAI2.ErrorAudioFreq-SAI_B_MasterWithClock=30.2 %
 SAI2.IPParameters=Instance-SAI_B_MasterWithClock,MClockEnable-SAI_B_MasterWithClock,VirtualMode-SAI_B_MasterWithClock,RealAudioFreq-SAI_B_MasterWithClock,ErrorAudioFreq-SAI_B_MasterWithClock
