--- a/stm32f779i-eval/stm32f779i-eval.ioc
+++ b/stm32f779i-eval/stm32f779i-eval.ioc
@@ -38,6 +38,7 @@ DSIHOST_D1P.Locked=true
 DSIHOST_D1P.Mode=DSIHost_Standalone
 DSIHOST_D1P.Signal=DSIHOST_D1P
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=true
 Mcu.CPN=STM32F779NIH6
 Mcu.Family=STM32F7
@@ -1235,14 +1236,14 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.IPParameters=ThreadXCcRTOSJjThreadXJjCore,NetXDuoCcNetworkJjNetXDuoJjNXOoCore,InterfacesCcNetworkJjEthernetOoInterface,InterfacesCcNetworkJjEthernetOoPhyOoInterface
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.InterfacesCcNetworkJjEthernetOoInterface=true
-STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.InterfacesCcNetworkJjEthernetOoPhyOoInterface=CustomIiPhyIiInterface
+STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.InterfacesCcNetworkJjEthernetOoPhyOoInterface=LAN8742IiPhyIiInterface
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.NetXDuoCcNetworkJjNetXDuoJjNXOoCore=true
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.NetworkJjInterfaces_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.NetworkJjNetXDuo_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.RTOSJjThreadX_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.ThreadXCcRTOSJjThreadXJjCore=true
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0_IsAnAzureRtosMw=true
-STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0_SwParameter=NetXDuoCcNetworkJjNetXDuoJjNXOoCore\:true;InterfacesCcNetworkJjEthernetOoInterface\:true;ThreadXCcRTOSJjThreadXJjCore\:true;InterfacesCcNetworkJjEthernetOoPhyOoInterface\:CustomIiPhyIiInterface;
+STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0_SwParameter=NetXDuoCcNetworkJjNetXDuoJjNXOoCore\:true;InterfacesCcNetworkJjEthernetOoInterface\:true;ThreadXCcRTOSJjThreadXJjCore\:true;STM32CubeIiBSPIiComponentsCcBoardOoPartJjETHPhyJjLAN8742\:true;InterfacesCcNetworkJjEthernetOoPhyOoInterface\:LAN8742IiPhyIiInterface;
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_DFSDM1_VS_IN0.Mode=Parallel_Input_ch0
