--- a/stm32f779i-eval/stm32f779i-eval.ioc
+++ b/stm32f779i-eval/stm32f779i-eval.ioc
@@ -1243,7 +1243,7 @@ STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.NetworkJjNetXDuo_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.RTOSJjThreadX_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0.ThreadXCcRTOSJjThreadXJjCore=true
 STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0_IsAnAzureRtosMw=true
-STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0_SwParameter=NetXDuoCcNetworkJjNetXDuoJjNXOoCore\:true;InterfacesCcNetworkJjEthernetOoInterface\:true;ThreadXCcRTOSJjThreadXJjCore\:true;STM32CubeIiBSPIiComponentsCcBoardOoPartJjETHPhyJjLAN8742\:true;InterfacesCcNetworkJjEthernetOoPhyOoInterface\:LAN8742IiPhyIiInterface;
+STMicroelectronics.X-CUBE-AZRTOS-F7.1.1.0_SwParameter=NetXDuoCcNetworkJjNetXDuoJjNXOoCore\:true;InterfacesCcNetworkJjEthernetOoInterface\:true;ThreadXCcRTOSJjThreadXJjCore\:true;InterfacesCcNetworkJjEthernetOoPhyOoInterface\:LAN8742IiPhyIiInterface;
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_DFSDM1_VS_IN0.Mode=Parallel_Input_ch0
