--- a/stm32f779i-eval/stm32f779i-eval.ioc
+++ b/stm32f779i-eval/stm32f779i-eval.ioc
@@ -860,13 +860,15 @@ PJ1.GPIOParameters=GPIO_Label
 PJ1.GPIO_Label=LED2 (red)
 PJ1.Locked=true
 PJ1.Signal=GPIO_Output
-PJ12.GPIOParameters=GPIO_Label
+PJ12.GPIOParameters=PinState,GPIO_Label
 PJ12.GPIO_Label=MII_MDIO_GPIO
 PJ12.Locked=true
+PJ12.PinState=GPIO_PIN_SET
 PJ12.Signal=GPIO_Output
-PJ13.GPIOParameters=GPIO_Label
+PJ13.GPIOParameters=PinState,GPIO_Label
 PJ13.GPIO_Label=MII_MDC_GPIO
 PJ13.Locked=true
+PJ13.PinState=GPIO_PIN_SET
 PJ13.Signal=GPIO_Output
 PJ14.GPIOParameters=GPIO_Label
 PJ14.GPIO_Label=LCD_B2
